--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="400" prefWidth="600"
           vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal"
-          fx:controller="org.loose.fis.sre.controllers.RegistrationController">
+          fx:controller="org.loose.fis.sre.controllers.LoginController">
     <padding>
         <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
     </padding>
@@ -26,16 +26,16 @@
     <ChoiceBox fx:id="role" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
     </ChoiceBox>
 
-    <Text fx:id="registrationMessage" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+    <Text fx:id="LoginMessage" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
 
-    <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleRegisterAction" text="Register"/>
+    <HBox alignment="bottom_center" spacing="6" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <Button onAction="#handleLoginAction" text="Log in"/>
     </HBox>
 
-    <Text id="register-text" text="You already have an account?" GridPane.columnIndex="1" GridPane.columnSpan="2"
-          GridPane.rowIndex="4"/>
+    <Text id="register-text" text="You don't have an account?" GridPane.columnIndex="0" GridPane.columnSpan="2"
+          GridPane.rowIndex="6"/>
 
-    <HBox alignment="bottom_left" spacing="1" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleLoginAction" text="Login"/>
+    <HBox alignment="bottom_right" spacing="1" GridPane.columnIndex="2" GridPane.rowIndex="6">
+        <Button onAction="#handleRegisterAction" text="Register"/>
     </HBox>
 </GridPane>
