--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -32,10 +32,10 @@
         <Button onAction="#handleRegisterAction" text="Register"/>
     </HBox>
 
-    <Text id="register-text" text="You already have an account?" GridPane.columnIndex="1" GridPane.columnSpan="2"
+    <Text id="login-text" text="You already have an account?" GridPane.columnIndex="1" GridPane.columnSpan="2"
           GridPane.rowIndex="4"/>
 
     <HBox alignment="bottom_left" spacing="1" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleLoginAction" text="Login"/>
+        <Button onAction="#handleLoginMenu" text="Log in"/>
     </HBox>
 </GridPane>
