--- a/src/main/resources/Client_menu.fxml
+++ b/src/main/resources/Client_menu.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <TabPane prefHeight="480.0" prefWidth="850.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
@@ -43,11 +50,98 @@
          <content>
             <AnchorPane prefHeight="480.0" prefWidth="850.0">
                <children>
-                  <Label layoutX="308.0" layoutY="132.0">
-                     <font>
-                        <Font size="96.0" />
-                     </font>
-                  </Label>
+                  <GridPane alignment="center" hgap="10" prefHeight="451.0" prefWidth="850.0" style="-fx-background-color: #34aaed;" vgap="10">
+                     <padding>
+                        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+                     </padding>
+                     <children>
+                        <Label id="title" text="SURVEY" GridPane.columnIndex="9" GridPane.columnSpan="5" />
+                        <Label id="q" text="How much do you like:" GridPane.columnIndex="5" GridPane.columnSpan="5" GridPane.rowIndex="3" />
+                        <Label id="q" text="Dogs" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                        <Label id="min" text="1" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="9" GridPane.rowIndex="4" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="11" GridPane.rowIndex="4" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="13" GridPane.rowIndex="4" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="15" GridPane.rowIndex="4" />
+                        <Label id="max" text="5" GridPane.columnIndex="16" GridPane.rowIndex="4" />
+                        <Label id="q" text="Cats" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                        <Label id="min" text="1" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="9" GridPane.rowIndex="6" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="11" GridPane.rowIndex="6" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="13" GridPane.rowIndex="6" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="15" GridPane.rowIndex="6" />
+                        <Label id="max" text="5" GridPane.columnIndex="16" GridPane.rowIndex="6" />
+                        <Label id="q" text="Furry" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+                        <Label id="min" text="1" GridPane.columnIndex="6" GridPane.rowIndex="8" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="8" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="9" GridPane.rowIndex="8" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="11" GridPane.rowIndex="8" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="13" GridPane.rowIndex="8" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="15" GridPane.rowIndex="8" />
+                        <Label id="max" text="5" GridPane.columnIndex="16" GridPane.rowIndex="8" />
+                        <Label id="q" text="Fish" GridPane.columnIndex="5" GridPane.rowIndex="10" />
+                        <Label id="min" text="1" GridPane.columnIndex="6" GridPane.rowIndex="10" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="10" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="9" GridPane.rowIndex="10" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="11" GridPane.rowIndex="10" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="13" GridPane.rowIndex="10" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="15" GridPane.rowIndex="10" />
+                        <Label id="max" text="5" GridPane.columnIndex="16" GridPane.rowIndex="10" />
+                        <Label id="q" text="Snakes" GridPane.columnIndex="5" GridPane.rowIndex="12" />
+                        <Label id="min" text="1" GridPane.columnIndex="6" GridPane.rowIndex="12" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="12" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="9" GridPane.rowIndex="12" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="11" GridPane.rowIndex="12" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="13" GridPane.rowIndex="12" />
+                        <RadioButton mnemonicParsing="false" GridPane.columnIndex="15" GridPane.rowIndex="12" />
+                        <Label id="max" text="5" GridPane.columnIndex="16" GridPane.rowIndex="12" />
+                        <HBox alignment="bottom_center" spacing="6" GridPane.columnIndex="12" GridPane.columnSpan="6" GridPane.rowIndex="14" />
+                        <Button text="Show your results" GridPane.columnIndex="18" GridPane.rowIndex="15" />
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                     </rowConstraints>
+                  </GridPane>
+
+
                </children>
             </AnchorPane>
          </content>
